crates/nbtdoc/src/syntax/snapshots/mcfunction_nbtdoc__syntax__lexer__tests__not_keyword.snap
---
source: crates/nbtdoc/src/syntax/lexer.rs
expression: "format_sk_list(super::tokenize_str(\"bytelong hello_world\"),\n               \"bytelong hello_world\")"
---
Ident `bytelong` at 0:0 - 0:8
Whitespace ` ` at 0:8 - 0:9
Ident `hello_world` at 0:9 - 0:20
Eof `` at 0:20 - 0:20

