crates/nbtdoc/src/syntax/snapshots/mcfunction_nbtdoc__syntax__lexer__tests__punct_single.snap
---
source: crates/nbtdoc/src/syntax/lexer.rs
expression: "format_sk_list(super::tokenize_str(\"@\"), \"@\")"
---
At `@` at 0:0 - 0:1
Eof `` at 0:1 - 0:1

