crates/nbtdoc/src/syntax/snapshots/mcfunction_nbtdoc__syntax__lexer__tests__quoted_string.snap
---
source: crates/nbtdoc/src/syntax/lexer.rs
expression: "format_sk_list(super::tokenize_str(r#\"\"hello world\"\"#), r#\"\"hello world\"\"#)"
---
QuotedString `"hello world"` at 0:0 - 0:13
Eof `` at 0:13 - 0:13

