crates/nbtdoc/src/syntax/snapshots/mcfunction_nbtdoc__syntax__lexer__tests__single_cr_linebreak.snap
---
source: crates/nbtdoc/src/syntax/lexer.rs
expression: "format_sk_list(super::tokenize_str(\"testing\\rbad newline\"),\n               \"testing\\rbad newline\")"
---
Ident `testing` at 0:0 - 0:7
Whitespace `\r` at 0:7 - 0:8
Ident `bad` at 0:8 - 0:11
Whitespace ` ` at 0:11 - 0:12
Ident `newline` at 0:12 - 0:19
Eof `` at 0:19 - 0:19

