crates/nbtdoc/src/syntax/snapshots/mcfunction_nbtdoc__syntax__lexer__tests__unclosed_string.snap
---
source: crates/nbtdoc/src/syntax/lexer.rs
expression: "format_sk_list(super::tokenize_str(\"\\\"hello world\"), \"\\\"hello world\")"
---
QuotedString `"hello world` at 0:0 - 0:12
Eof `` at 0:12 - 0:12

