crates/nbtdoc/src/syntax/snapshots/mcfunction_nbtdoc__syntax__lexer__tests__unclosed_string_newline.snap
---
source: crates/nbtdoc/src/syntax/lexer.rs
expression: "format_sk_list(super::tokenize_str(\"\\\"hello world\\ngoodbye\\\"\"),\n               \"\\\"hello world\\ngoodbye\\\"\")"
---
QuotedString `"hello world` at 0:0 - 0:12
Whitespace `\n` at 0:12 - 1:0
Ident `goodbye` at 1:0 - 1:7
QuotedString `"` at 1:7 - 1:8
Eof `` at 1:8 - 1:8

