crates/nbtdoc/src/syntax/snapshots/mcfunction_nbtdoc__syntax__lexer__tests__whitespace.snap
---
source: crates/nbtdoc/src/syntax/lexer.rs
expression: "format_sk_list(super::tokenize_str(\"   \\t    \\t\\t\\t  \"), \"   \\t    \\t\\t\\t  \")"
---
Whitespace `   \t    \t\t\t  ` at 0:0 - 0:13
Eof `` at 0:13 - 0:13

